History
=======

Version 0.6.12 - Unreleased
---------------------------

- Subscription creation date is now used as que when the subscription has
  no real cue. I.e. the first time a new subscription is used.
  I was amazed to find this was not already the case.
  [tmog]

- Triggering a periodic scheduler that has a delta now always updates
  trickered_last by a product of that delta. This means the periodic
  schedulers now no longer suffer from the time "drift" that resulted
  from always saving the precise triggering time to their triggered_last
  attribute. 
  [tmog]


- Added caching of item formatting via plone.memoize.request.
  This really(!) speeds up message generation, especially when
  sending 'full' items from 'send as newsletter'.
  [tmog]

Version 0.6.11 - 2009-03-11
---------------------------

- Added optional keyword argument 'override_vars' to IComposer.render and
  MessageAssemble.__call__ methods. This is to facilitate overriding of
  composer_vars. For example from the sendnewsletter.html form in
  collective.dancing. Send-outs stored in TimedScheduler will now
  also include 'override_vars'.
  [tmog]

- Removed version pinning of zope.app.catalog to <= 3.6.0.  This is
  handled through our external extends file now.  See
  https://svn.plone.org/svn/collective/collective.dancing/buildout-extends/0.8.7.cfg
  and http://pypi.python.org/pypi/collective.dancing#installation
  [nouri]

Version 0.6.10 - 2009-02-01
---------------------------

- Changed eventhandlers for subscriptions indexing to look for
  the Subscriptions object in 'channel._subscriptions' first.
  This allows for a property decorated 'subscriptions' function
  that keeps data in '_subscriptions'.
  [tmog]

Version 0.6.9 - 2009-01-20
--------------------------

- Pinned zope.app.catalog version to pre 3.6.0 to avoid issue in
  https://bugs.launchpad.net/singing-dancing/+bug/301082
  [tmog]

Version 0.6.8 - 2009-01-02
--------------------------
